Fix Pty::setFlowControlEnabled to set IXON, not (IXON | IXOFF)

Removed `IXOFF` flag and renamed `_xonXoff` to just `_xon`.

tldr: IXOFF is for physical ttys, not ptys, and every other terminal
emulator out there doesn't set IXOFF. It sticks out like a sore thumb
when running `$ stty`, and was probably incorrectly implemented due to
`man 1 stty`'s crust. See bug 495276 for the full writeup.

BUG: 495276